Bug fixes and debugging